modify model and added comment, testimonial, transaction
