# schema/index.js
@@ -4,6 +4,7 @@ const RoleSchema = require("./roles");
 const RoomCommentSchema = require("./room_comment");
 const TestimonialSchema = require("./testimonial");
 const UserSchema = require("./user");
+const TransactionSchema = require("./transaction");
 
 const GlobalSchema = {
   ...UserSchema,
@@ -12,6 +13,7 @@ const GlobalSchema = {
   ...BoardingResidenceSchema,
   ...RoomCommentSchema,
   ...TestimonialSchema,
+  ...TransactionSchema,
 };
 
 module.exports = GlobalSchema;
