# schema/transaction.js
@@ -1,0 +1,7 @@
+const { TransactionModelDefine } = require("../resource/models/transactions");
+
+const TransactionSchema = {
+  BodyTransactionSchema: TransactionModelDefine,
+};
+
+module.exports = TransactionSchema;
